--- a/src/app/modules/contests/pages/contest/contest-attempts/contest-attempts.component.html
+++ b/src/app/modules/contests/pages/contest/contest-attempts/contest-attempts.component.html
@@ -30,22 +30,15 @@
 
                 <attempts-table [hideSourceCodeSize]="true" [attempts]="attempts" [contest]="contest"></attempts-table>
 
-                <ngb-pagination
+                <pagination
                   *ngIf="attempts.length > 0"
                   [collectionSize]="totalAttemptsCount"
                   [(page)]="currentPage"
                   [pageSize]="20"
                   [maxSize]="5"
                   (pageChange)="reloadAttempts()"
-                  aria-label="Default pagination"
-                  class="d-flex justify-content-center mt-2"
                 >
-                  <ng-template ngbPaginationPrevious><span [data-feather]="'chevron-left'" [size]="18"
-                      [class]="'font-weight-bolder'"></span>
-                  </ng-template>
-                  <ng-template ngbPaginationNext><span [data-feather]="'chevron-right'" [size]="18"
-                      [class]="'font-weight-bolder'"></span></ng-template>
-                </ngb-pagination>
+                </pagination>
               </div>
             </div>
           </div>
