--- a/src/app/modules/contests/components/contest-card/contest-card-big/contest-card-big.component.html
+++ b/src/app/modules/contests/components/contest-card/contest-card-big/contest-card-big.component.html
@@ -116,22 +116,22 @@
 
       <span *ngIf="contest.status != 1">
         <kepcoin-spend-swal
-          *ngIf="contest.status != 0 && contest.userInfo.isRated && contest.userInfo.isRegistered && !contest.userInfo.doubleRatingPurchased"
+          *ngIf="contest.status != 0 && contest.isRated && contest.userInfo.isRegistered && !contest.userInfo.doubleRatingPurchased"
           [customContent]="true" [purchaseUrl]="'contests/' + contest.id + '/purchase-double-rating/'"
           (success)="contest.doubleRatingPurchased=true;" [value]="25" class="mr-1"
           ngbTooltip="{{ 'DoubleRating' | translate }}">
           <img height="25" src="assets/images/icons/x2-delta.png">
         </kepcoin-spend-swal>
         <img ngbTooltip="{{ 'Purchased' | translate }}"
-             *ngIf="contest.userInfo.isRegistered && contest.userInfo.isRated && contest.userInfo.doubleRatingPurchased" height="25"
+             *ngIf="contest.userInfo.isRegistered && contest.isRated && contest.userInfo.doubleRatingPurchased" height="25"
              src="assets/images/icons/x2-delta.png" class="mr-1">
         <kepcoin-spend-swal
-          *ngIf="contest.status != 0 && contest.userInfo.isRated && contest.userInfo.isRegistered && !contest.userInfo.saveRatingPurchased"
+          *ngIf="contest.status != 0 && contest.isRated && contest.userInfo.isRegistered && !contest.userInfo.saveRatingPurchased"
           [customContent]="true" [purchaseUrl]="'contests/' + contest.id + '/purchase-save-rating/'" [value]="25"
           (success)="contest.userInfo.saveRatingPurchased=true;" class="mr-1" ngbTooltip="{{ 'SaveRating' | translate }}">
           <img height="25" src="assets/images/icons/save-rating.png">
         </kepcoin-spend-swal>
-        <img ngbTooltip="{{ 'Purchased' | translate }}" *ngIf="contest.userInfo.isRegistered && contest.userInfo.isRated && contest.userInfo.saveRatingPurchased"
+        <img ngbTooltip="{{ 'Purchased' | translate }}" *ngIf="contest.userInfo.isRegistered && contest.isRated && contest.userInfo.saveRatingPurchased"
              height="25" src="assets/images/icons/save-rating.png" class="mr-1">
         <button ngbTooltip="{{ 'Cancel' | translate }}" rippleEffect class="btn btn-sm round btn-gradient-success"
           (click)="cancelRegistration()" *ngIf="contest.userInfo.isRegistered">
