--- a/src/app/modules/problems/components/problem-body/problem-body.component.html
+++ b/src/app/modules/problems/components/problem-body/problem-body.component.html
@@ -82,9 +82,11 @@
         </thead>
         <tbody>
           <tr>
-            <td class="pl-2" [innerText]="sampleTest.input">
+            <td class="pl-2">
+              <pre [innerText]="sampleTest.input"></pre>
             </td>
-            <td class="pl-2" [innerText]="sampleTest.output">
+            <td class="pl-2">
+              <pre [innerText]="sampleTest.output"></pre>
             </td>
           </tr>
         </tbody>
