--- a/src/app/modules/challenges/components/challenges-user-view/challenges-user-view.component.scss
+++ b/src/app/modules/challenges/components/challenges-user-view/challenges-user-view.component.scss
@@ -1,8 +1,8 @@
 .badge-pill {
     margin-right: 6px;
-    width: 30px;
-    height: 23px;
     white-space: nowrap;
+    height: auto !important;
+    width: auto !important;
     font-weight: 600 !important;
     font-size: 10px !important;
 }
