--- a/src/app/modules/users/pages/user-profile/user-profile.component.html
+++ b/src/app/modules/users/pages/user-profile/user-profile.component.html
@@ -23,7 +23,7 @@
                     {{ user.firstName }} {{ user.lastName }}
                     <span *ngIf="user.streak >= 7">
                       <ng-template #tipContent>
-                        <img src="assets/images/icons/fire_red.png" height="19" alt=""> {{ user.streak }}
+                        <img src="../../../../../assets/images/icons/fire_red.png" height="19" alt=""> {{ user.streak }}
                       </ng-template>
                       <span class="badge badge-pill badge-kep" [ngbTooltip]="tipContent">KEP</span>  
                     </span>
