--- a/src/app/modules/problems/components/attempts-table/attempts-table.component.html
+++ b/src/app/modules/problems/components/attempts-table/attempts-table.component.html
@@ -36,7 +36,7 @@
 
 <audio
   #successAudio
-  src="assets/audio/success.mp3">
+  src="assets/audio/success/{{ successSoundName }}.mp3">
 </audio>
 
 <audio
