add rating system for users

--- a/src/app/shared/components/pagination/pagination.component.html
+++ b/src/app/shared/components/pagination/pagination.component.html
@@ -3,20 +3,37 @@
   [(page)]="page"
   [pageSize]="pageSize"
   [maxSize]="maxSize"
+  [ellipses]="ellipses"
+  [rotate]="rotate"
+  [boundaryLinks]="boundaryLinks"
   (pageChange)="change($event)"
   class="d-flex justify-content-center pagination-{{ color }} mt-2">
-<ng-template ngbPaginationPrevious>
-  <span
-    [data-feather]="'chevron-left'"
-    [size]="18"
-    [class]="'font-weight-bolder'">
-  </span>
-</ng-template>
-<ng-template ngbPaginationNext>
-  <span
-    [data-feather]="'chevron-right'"
-    [size]="18"
-    [class]="'font-weight-bolder'">
-  </span>
-</ng-template>
+  <ng-template ngbPaginationFirst>
+    <span
+      [data-feather]="'chevrons-left'"
+      [size]="18"
+      [class]="'font-weight-bolder'">
+    </span>
+  </ng-template>
+  <ng-template ngbPaginationPrevious>
+    <span
+      [data-feather]="'chevron-left'"
+      [size]="18"
+      [class]="'font-weight-bolder'">
+    </span>
+  </ng-template>
+  <ng-template ngbPaginationNext>
+    <span
+      [data-feather]="'chevron-right'"
+      [size]="18"
+      [class]="'font-weight-bolder'">
+    </span>
+  </ng-template>
+  <ng-template ngbPaginationLast>
+    <span
+      [data-feather]="'chevrons-right'"
+      [size]="18"
+      [class]="'font-weight-bolder'">
+    </span>
+  </ng-template>  
 </ngb-pagination>
